--- a/Html-Aula1/Exemplo1.html
+++ b/Html-Aula1/Exemplo1.html
@@ -6,6 +6,11 @@
     <title>Página Html</title>
 </head>
 <body>
+    <a href="atividade2.html">Página inicial | </a>
+    <a href="exemplo2.html">Exemplo2 | </a>
+    <a href="Ruan-m-vieira Atividade 1.html">Atividade1</a>
+    <!-- <a href="mailto:ruan_m_vieira@estudante.sesisenai.org.br">Fale conosco</a> -->
+
     <h1> Olá Mundo </h1>
     <p> Eu estou fazendo esse código</p>
     <p> oara me livrar da maldição </p>
@@ -13,5 +18,9 @@
     <br>
     <p> Provérbio Nerd </p>
     <p> Ruan de Mello Vieira </p>
+    <br>
+<br>
+<!-- <a href="Exemplo1.html#volta">Link</a> -->
+<center> <address>Ruan de Mello Vieira - Estudante - tecnico de desenvolvimento de sistemas</address> </center>
 </body>
 </html>
