--- a/Html-Aula1/Ruan-m-vieira Atividade 1.html
+++ b/Html-Aula1/Ruan-m-vieira Atividade 1.html
@@ -6,6 +6,11 @@
     <title>lista de material</title>
 </head>
 <body>
+    <a href="atividade2.html">Página inicial | </a>
+    <a href="exemplo1.html">Exemplo 1 | </a>
+    <a href="exemplo2.html">Exemplo 2</a>
+    <!-- <a href="mailto:ruan_m_vieira@estudante.sesisenai.org.br">Fale conosco</a> -->
+
     <h1> Lista de  Compras</h1>
     <h3>Material de Limpeza</h3>
     <p> aqui esta a lista do que precisa comprar para a limpeza</p>
@@ -92,5 +97,10 @@
     </pre></strong>
     </dl>
     <p> Ruan de Mello Vieira</p>
+    <br>
+<br>
+
+<!-- <a href="Ruan-m-vieira Atividade 1.html#volta">Link</a> -->
+<center> <address>Ruan de Mello Vieira - Estudante - tecnico de desenvolvimento de sistemas</address> </center>
 </body>
 </html>
