--- a/Html-Aula1/exemplo2.html
+++ b/Html-Aula1/exemplo2.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="atividade2.html">Página inicial | </a>
+    <a href="exemplo1.html">Exemplo 1 | </a>
+    <a href="Ruan-m-vieira Atividade 1.html">Atividade 1</a>
+    <!-- <a href="mailto:ruan_m_vieira@estudante.sesisenai.org.br">Fale conosco</a> -->
+
     <h3>Lista não numerada</h3>
     <ul>
 <li>Maçãs</li>
@@ -55,5 +60,9 @@
         Útil para colar código de programas.
     </pre>
     <strong><p> Ruan de Mello Vieira</p></strong>
+    <br>
+<br>
+<!-- <a href="exemplo2.html#volta">Link</a> -->
+<center> <address>Ruan de Mello Vieira - Estudante - tecnico de desenvolvimento de sistemas</address> </center>
 </body>
 </html>
